--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url= jdbc:postgresql://localhost:5432/nerd_base
+spring.datasource.url= jdbc:postgresql://localhost:5432/exercise
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
